fixed the Intro z-index and hid the Audio component

--- a/prototype/src/App.css
+++ b/prototype/src/App.css
@@ -3,7 +3,6 @@
 body {
 	background: #EAE3D1;
 	/*background: url(./assets/notebook.png) center;*/
-
 }
 
 .App {
@@ -20,12 +19,18 @@ body {
 	background: url(./assets/intro_solidcolor.png) center no-repeat;
 	width: 100vw;
 	height: 100vh;
+	position: relative;
+	z-index: 1
 }
 
 .Content-Wrap {
 	margin-bottom: 10vh;
 	/*border: 1px solid black;*/
 	display: block;
+}
+
+.Audio {
+	visibility: hidden;
 }
 
 .Content {
@@ -69,7 +74,7 @@ svg {
 	top: 10vh;
 	position: fixed;
 	/*border: 1px solid red;*/
-	z-index: -1;
+	/*z-index: -1;*/
 }
 
 path {
@@ -77,7 +82,7 @@ path {
   fill: none;
   stroke: #666;
   stroke-opacity: 0.1;
-  stroke-opacity: 0;
+  /*stroke-opacity: 0;*/
 }
 
 .Voronoi {
